# AquaInspector-Sensor

./: .gitignore  README.md  deploy.sh
micro_controller_code/: Cargo.toml  build.rs  sdkconfig.defaults
micro_controller_code/src/: main.rs
