[package]
name = "micro_controller_code"
version = "0.1.0"
authors = ["Ryan McCarthy <ryanmccarthy667@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "micro_controller_code"
harness = false # Disable test harness to resolve rust-analyzer errors

[profile.release]
opt-level = "s" # Optimize for size

[profile.dev]
debug = true    # Enable debug symbols in development builds
opt-level = "z" # Optimize for size in dev builds

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
heapless = "0.7"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" 