[package]
name = "micro_controller_code"
version = "0.1.0"
authors = ["Ryan McCarthy <ryanmccarthy667@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"
# Add this to explicitly enable build scripts
build = "build.rs"

[[bin]]
name = "micro_controller_code"
harness = false # Disable test harness to resolve rust-analyzer errors

[profile.release]
opt-level = "s" # Optimize for size

[profile.dev]
debug = true    # Enable debug symbols in development builds
opt-level = "z" # Optimize for size in dev builds

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
ds18b20= "^0.1"
one-wire-bus = "^0.1"
log = "^0.4"
esp-idf-svc = { version = "^0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
heapless = "^0.8.0"



[build-dependencies]
embuild = "^0.32.0"
cc = "^1.1.30" 
