[package]
name = "micro_controller_code"
version = "0.1.0"
authors = ["Ryan McCarthy <ryanmccarthy667@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"
# Add this to explicitly enable build scripts
build = "build.rs"

[[bin]]
name = "micro_controller_code"
harness = false # Disable test harness to resolve rust-analyzer errors

[profile.release]
opt-level = "s" # Optimize for size

[profile.dev]
debug = true    # Enable debug symbols in development builds
opt-level = "z" # Optimize for size in dev builds

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = "^0.51"
one-wire-bus = "^0.1"
ds18b20 = "^0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
embedded-svc = "*"
heapless = "*"




[build-dependencies]
embuild = {version = "^0.33.0" , features =["espidf"]}
cc = "^1.1.30"